--- a/examples/app.json
+++ b/examples/app.json
@@ -3,13 +3,14 @@
     "pages/switchTab/temp/temp",
     "pages/comp/noticeBar/noticeBar",
     "pages/comp/steps/steps",
+    "pages/comp/grids/grids",
     "pages/comp/swiperPanel/swiperPanel",
     "pages/comp/swiper/swiper",
     "pages/comp/progress/progress",
     "pages/comp/prop/prop",
+    "pages/comp/imgPicker/imgPicker",
     "pages/comp/dialog/dialog",
     "pages/comp/panel/panel",
-    "pages/comp/grids/grids",
     "pages/comp/loadMore/loadMore",
     "pages/comp/background/background",
     "pages/comp/tabBar/tabBar",
