--- a/examples/app.json
+++ b/examples/app.json
@@ -3,10 +3,12 @@
     "pages/switchTab/temp/temp",
     "pages/comp/noticeBar/noticeBar",
     "pages/comp/input/input",
+    "pages/comp/chat/chat",
     "pages/comp/button/button",
     "pages/comp/search/search",
     "pages/comp/grids/grids",
     "pages/comp/steps/steps",
+    "pages/comp/slide/slide",
     "pages/comp/dialog/dialog",
     "pages/comp/shadow/shadow",
     "pages/comp/swiperPanel/swiperPanel",
@@ -30,14 +32,14 @@
     "pages/comp/empty/empty",
     "pages/comp/collapse/collapse",
     "pages/comp/layout/layout",
-    "pages/comp/checkbox/checkbox",
-    "pages/comp/radio/radio",
     "pages/comp/notify/notify",
     "pages/comp/avatar/avatar",
     "pages/comp/loading/loading",
     "pages/comp/divider/divider",
     "pages/comp/stepper/stepper",
     "pages/comp/tab/tab",
+    "pages/comp/checkbox/checkbox",
+    "pages/comp/radio/radio",
     "pages/comp/navBar/navBar",
     "pages/comp/sheet/sheet",
     "pages/comp/rate/rate",
